Fixed card title alignment

--- a/src/custom.css
+++ b/src/custom.css
@@ -150,10 +150,16 @@ ul.navbar-nav li.active a {
   height: 480px;
 }
 
-.card h6,
 .short-string {
   white-space: nowrap;
   width: 100%; /* IE6 needs any width */
+  overflow: hidden; /* "overflow" value must be different from  visible"*/
+  -o-text-overflow: ellipsis; /* Opera < 11*/
+  text-overflow: ellipsis; /* IE, Safari (WebKit), Opera >= 11, FF > 6 */
+}
+
+.card h6 {
+  white-space: nowrap;
   overflow: hidden; /* "overflow" value must be different from  visible"*/
   -o-text-overflow: ellipsis; /* Opera < 11*/
   text-overflow: ellipsis; /* IE, Safari (WebKit), Opera >= 11, FF > 6 */
